--- a/vercel.json
+++ b/vercel.json
@@ -2,7 +2,7 @@
   "version": 2,
   "framework": "vite",
   "buildCommand": "vite build",
-  "outputDirectory": "client/dist",
+  "outputDirectory": "dist",
   "routes": [
     {
       "handle": "filesystem"
